--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,12 @@ logs
 *.log
 
 # Misc
-.DS_Store
-.fleet
-.idea
+*.DS_Store
+*.fleet
+*.idea
 
 # Local env files
-.env
-.env.*
+*.env
+*.env.*
 !.env.example
 
