--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -1,16 +1,18 @@
 nelmio_cors:
-    defaults:
-        origin_regex: true
-        allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['Content-Type', 'Authorization']
-        expose_headers: ['Link']
-        max_age: 3600
-    paths:
-        '^/api/':
-            origin_regex: true
-            allow_origin: [ 'http://localhost:3000' ]
-            allow_methods: [ 'GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE' ]
-            allow_headers: [ 'Content-Type', 'Authorization' ]
-            expose_headers: [ 'Link' ]
-            max_age: 3600
+  defaults:
+    origin_regex: true
+    allow_origin: [ '%env(CORS_ALLOW_ORIGIN)%' ]
+    allow_methods: [ 'GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE' ]
+    allow_headers: [ 'Content-Type', 'Authorization', 'X-Requested-With' ]
+    expose_headers: [ 'Link' ]
+    allow_credentials: true
+    max_age: 3600
+  paths:
+    '^/api/':
+      origin_regex: true
+      allow_origin: [ 'http://localhost:3000' ]
+      allow_methods: [ 'GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE' ]
+      allow_headers: [ 'X-Custom-Auth', 'Content-Type', 'Authorization' ]
+      expose_headers: [ 'Link' ]
+      allow_credentials: true
+      max_age: 3600
