--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "h3": "^1.12.0",
     "mande": "^2.0.9",
     "nuxt": "^3.12.2",
+    "nuxt-storage": "^1.2.2",
     "pinia": "^2.0.0",
+    "uuid": "^10.0.0",
     "vue": "^3.4.31"
   },
   "devDependencies": {
