--- a/docker/nginx/conf.d/vhost.conf
+++ b/docker/nginx/conf.d/vhost.conf
@@ -2,7 +2,7 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
     index index.php index.html index.htm;
-    server_name test.server;
+    server_name localhost;
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log combined if=$loggable;
     root /var/www/test/backend/public;
